@@ -6,9 +6,6 @@
 	<artifactId>dataexporter</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
-	<properties>
-		<jre.compiler.version>1.8</jre.compiler.version>
-	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
@@ -30,7 +27,7 @@
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>2.7.0</version>
+			<version>2.7.4</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -130,6 +127,18 @@
 			<version>2.5.6</version>
 			<type>pom</type>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.0.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
 	<!-- Mockneat repository -->
 	<repositories>
@@ -144,11 +153,10 @@
 				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.0</version>
 				<configuration>
-					<!-- <encoding>UTF-8</encoding> -->
-					<source>${jre.compiler.version}</source>
-					<target>${jre.compiler.version}</target>
+					<encoding>UTF-8</encoding>
+					<release>11</release>
 					<optimize>true</optimize>
 					<debug>true</debug>
 				</configuration>
@@ -193,6 +201,37 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<!-- plugin to help find updates for modules -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<generateBackupPoms>false</generateBackupPoms>
+				</configuration>
+			</plugin>
+			<!-- surefire for Tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
